--- a/trunk/INDSExManGUI/nbproject/project.properties
+++ b/trunk/INDSExManGUI/nbproject/project.properties
@@ -1,3 +1,8 @@
+application.title=INDSExManGUI
+application.vendor=JohnW
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,9 +33,7 @@ javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -42,6 +45,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/C:/user/DryScan/nasa-dryden-dt/INDSExManGUI/dist
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=com.rbnb.inds.INDSExManGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -58,4 +67,3 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
-test.src.dir=test
