Tomcat is now started as a separate process.  Include a Windows .bat file for startup and also tweak P3_startup.xml (remove the tomcat element).

--- a/XMLtoDiagram/cgi-bin/defaults.cfg
+++ b/XMLtoDiagram/cgi-bin/defaults.cfg
@@ -5,5 +5,5 @@
 # pfh 1/13/09
 #
 [dot]
-dotcmd=/sw/bin/dot
-dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
+# dotcmd=/sw/bin/dot
+# dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
