--- a/trunk/XMLtoDiagram/cgi-bin/defaults.cfg
+++ b/trunk/XMLtoDiagram/cgi-bin/defaults.cfg
@@ -5,5 +5,5 @@
 # pfh 1/13/09
 #
 [dot]
-dotcmd=/sw/bin/dot
-dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
+# dotcmd=/sw/bin/dot
+# dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
