--- a/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/web.xml
+++ b/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/web.xml
@@ -37,6 +37,16 @@
         <url-pattern>/index.jsp</url-pattern>
     </servlet-mapping>
 
+	<mime-mapping>
+	   <extension>svg</extension>
+	   <mime-type>image/svg+xml</mime-type>
+	</mime-mapping>
+
+	<mime-mapping>
+	   <extension>svgz</extension>
+	   <mime-type>image/svg+xml</mime-type>
+	</mime-mapping>
+	
 <!-- JSPC servlet mappings end -->
 
 </web-app>
