--- a/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
+++ b/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
@@ -5,5 +5,7 @@
 # pfh 1/13/09
 #
 [dot]
-# dotcmd=/sw/bin/dot
-# dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
+#dotcmd=/sw/bin/dot
+#dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
+[inds]
+XML_URL=http://localhost/p3.xml
