--- a/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/example-defaults.cfg
+++ b/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/example-defaults.cfg
@@ -1,3 +1,11 @@
+# invoke the 'dot' binary and the path isn't always right. You can
+# set the path here and also any system-specific options. This version 
+# is for Mac OSX with dot installed from Fink (graphviz package)
+# pfh 1/13/09
+#
 [dot]
 dotcmd=/sw/bin/dot
 dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
+# This URL defines the query location for the INDS execution manager. Should point to complete query URL.
+[inds]
+XML_URL=http://localhost/indsExec/?action=getRootConfiguration
