Added error checking and handling code along with basic error messages, added debug dotFinder.py to display configuration, and got the code running dot correctly. Most importantly, the xRender.py now pulls the INDS XML directly from the running execution manager. Next up, add URLs to the SVG - tricky because I don't know their canonical names yet.

--- a/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
+++ b/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
@@ -5,7 +5,7 @@
 # pfh 1/13/09
 #
 [dot]
-#dotcmd=/sw/bin/dot
+dotcmd=/sw/bin/dot
 #dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
 [inds]
-XML_URL=http://localhost/indsExec?action=getRootConfiguration
+XML_URL=http://localhost/indsExec/?action=getRootConfiguration
