--- a/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
+++ b/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
@@ -8,4 +8,4 @@
 dotcmd=/sw/bin/dot
 #dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
 [inds]
-XML_URL=http://localhost/indsExec/?action=getRootConfiguration
+hostname=localhost
