Complete refactor/rewrite of the code. Now parses all data from INDS directly, only diving into the XML snippets when required. Will now handle any new commands without source code changes. A bit slower due to the heavy HTTP traffic, annoyingly.
Still need to run it on Windows, but commit working on Unix.

--- a/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
+++ b/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
@@ -8,4 +8,4 @@
 dotcmd=/sw/bin/dot
 #dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
 [inds]
-XML_URL=http://localhost/indsExec/?action=getRootConfiguration
+hostname=localhost
