--- a/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
+++ b/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
@@ -7,5 +7,24 @@
 [dot]
 dotcmd=/sw/bin/dot
 #dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
+
+# How to color the graph nodes
+[dotcolors]
+source=blue
+sink=green
+server=red
+plugin=blue
+converter=brown
+
+# How to color the graph edges
+[edgecolors]
+source=blue
+sink=green
+server=red
+plugin=blue
+converter=brown
+
 [inds]
 hostname=localhost
+viewhost=localhost:80
+
