--- a/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/example-defaults.cfg
+++ b/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/example-defaults.cfg
@@ -6,6 +6,26 @@
 [dot]
 dotcmd=/sw/bin/dot
 dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
-# This URL defines the query location for the INDS execution manager. Should point to complete query URL.
+
+# Colors - all black is the graphviz default FYI.
+# How to color the graph nodes
+[dotcolors]
+source=blue
+sink=green
+server=red
+plugin=blue
+converter=brown
+
+# How to color the graph edges
+[edgecolors]
+source=blue
+sink=green
+server=red
+plugin=blue
+converter=brown
+
+# INDS hostname is the host where INDS is running. viewhost is where the indsViewer app is.
 [inds]
-XML_URL=http://localhost/indsExec/?action=getRootConfiguration
+hostname=localhost
+viewhost=localhost:80
+
