--- a/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
+++ b/trunk/INDS/Utility/RBNB/V3.1B3/apache-tomcat-5.5.12/webapps/ROOT/WEB-INF/cgi/defaults.cfg
@@ -1,30 +1,22 @@
-# Configuration file for XML -> graphviz code. It needs to be able to
-# invoke the 'dot' binary and the path isn't always right. You can
-# set the path here and also any system-specific options. This version 
-# is for Mac OSX with dot installed from Fink (graphviz package)
-# pfh 1/13/09
-#
-[dot]
-dotcmd=/sw/bin/dot
-#dotparams=-Nfontname=/System/Library/Fonts/Times.dfont
-
-# How to color the graph nodes
-[dotcolors]
-source=blue
-sink=green
-server=red
-plugin=blue
-converter=brown
-
-# How to color the graph edges
 [edgecolors]
-source=blue
-sink=green
-server=red
-plugin=blue
-converter=brown
+converter = brown
+plugin = blue
+server = red
+source = blue
+sink = green
+
+[dotcolors]
+converter = brown
+plugin = blue
+server = red
+source = blue
+sink = green
+
+[dot]
+dotcmd = /sw/bin/dot
 
 [inds]
-hostname=localhost
-viewhost=localhost:80
+hostname = localhost
+last-run-checksum = 61d592158a0bcd15e7dac3897c83f79f
+viewhost = localhost:80
 
