--- a/trunk/INDSExManServlet/build.xml
+++ b/trunk/INDSExManServlet/build.xml
@@ -34,7 +34,7 @@
 	</target>
 	
 	<target name="compile" depends="init">
-		<!-- Build ChartServlet into the WebTurbine web application: -->
+		<!-- Build Exection Manager Servlet -->
 		<javac destdir="out/WEB-INF/classes"
 				deprecation = "on"
 				source = "1.5"
@@ -46,8 +46,21 @@
 			<classpath refid = "rmistubscp" />
 			<compilerarg value="-Xlint:all"/>
 		</javac>
-		<copy todir = "out/WEB-INF" file="src/web.xml" />			
-		<copy todir = "out/WEB-INF/lib" file="${rmiStubPath}" />			
+		<copy todir = "out/WEB-INF" file="src/web.xml" />
+		<copy todir = "out/WEB-INF/lib" file="${rmiStubPath}" />	
+		
+		<!-- Build Exection Manager Viewer -->
+		<javac destdir="viewerJsp/WEB-INF/classes"
+				deprecation = "on"
+				source = "1.5"
+				target = "1.5"
+				debug = "on"
+				srcdir = "src" 
+				includes = "indsBean/*.java" >
+			<classpath refid = "servletcp" />
+			<classpath refid = "rmistubscp" />
+			<compilerarg value="-Xlint:all"/>
+		</javac>
 		<copy todir = "viewerJsp/WEB-INF/lib" file="${rmiStubPath}" />			
 	</target>
 
