--- a/trunk/RBNB/V3.2B3/apache-tomcat-6.0.18/webapps/ROOT/WEB-INF/cgi/defaults.cfg
+++ b/trunk/RBNB/V3.2B3/apache-tomcat-6.0.18/webapps/ROOT/WEB-INF/cgi/defaults.cfg
@@ -13,10 +13,10 @@ source = blue
 sink = green
 
 [dot]
-dotcmd = C:\PROGRA~1\Graphviz2.26.3\bin\dot.exe
+dotcmd = /usr/bin/dot
 
 [inds]
 hostname = localhost
-last-run-checksum = d41d8cd98f00b204e9800998ecf8427e
+last-run-checksum = 158b49e9b6fa40aaad2c7339349921b3
 viewhost = localhost:80
 
