Couple minor tweaks to the Iridium driver code and config file.  Add a README file which contains brief documentation and "to-do" list.

--- a/trunk-9601Driver/IridiumV3/IridiumV3/9601.cfg
+++ b/trunk-9601Driver/IridiumV3/IridiumV3/9601.cfg
@@ -1,8 +1,7 @@
-MODEMPATH	/dev/ttyUSB0
+MODEMPATH	/dev/ttyS0
 BAUDRATE	19200
 DESTINATION	127.0.0.1
 READPORT	5000
 WRITEPORT	5001
 PROTOCOL	UDP
-
 
