--- a/INDSExManServlet/build.xml
+++ b/INDSExManServlet/build.xml
@@ -18,6 +18,9 @@
 			 Also, for this new Tomcat distribution, I changed the
 			 definition of where to find servlet-api.jar and
 			 jsp-api.jar (see below).
+	2011/08/04  JPW  Changed definition of jakartadir from
+	                 "../RBNB/V3.2B3/apache-tomcat-6.0.18" to
+	                 "../RBNB/V3.2B6/apache-tomcat-7.0.19".
 -->
 
 <project name="INDS Execution Manager Servlet" default="library" basedir=".">
@@ -33,7 +36,7 @@
 	
 	<!-- Set this to your web server path  -->  
 	<property name="jakartadir" 
-			value="../RBNB/V3.2B3/apache-tomcat-6.0.18" />			
+			value="../RBNB/V3.2B6/apache-tomcat-7.0.19" />			
 	<path id = "servletcp" >
 		<!-- With new Tomcat 6, these paths have changed a bit -->
 		<!--pathelement location="${jakartadir}/common/lib/servlet-api.jar"/-->
