NOTE: All these changes are in preparation for integrating the new RBNB distribution, V3.2B6 (which includes the updated Tomcat 7.0.19).  This new RBNB has not yet been formally integrated into IEM and committed, but will be shortly (should be within a few days).
1. commands.xml: Update paths for newer version of RBNB (V3.2B6) and updated Tomcat (7.0.19).

2. CommandConfiguration.java: If commands.xml isn't found in the current working directory, take a guess as to its location in the INDSExecutionManager directory.  This change will work for all of our current NASA installations and avoids needing to update commands.xml in each individual project folder.

3. Demux.java: Class now extends JavaCommand (instead of DtCommand) because the sub-classes that extend Demux (CsvDemux and XmlDemux) are now included in the new RBNB distribution (V3.2B6) as jar files (they are no longer class files under the INDS-Utility directory).

4. UdpCapture.java: UDPCapture is included in the new RBNB distribution (V3.2B6) as a jar file; it is no longer a class file under the INDS-Utility directory.  Correspondingly, we changed how to launch this application.

--- a/INDSExecutionManager/build.xml
+++ b/INDSExecutionManager/build.xml
@@ -74,6 +74,7 @@
 		<delete dir="out" />
 		<delete dir="rmi" />
 		<delete file="bin/inds_exec.jar" />
+		<delete file="bin/inds_rmistubs.jar" />
 	</target>
 	
 	<target name="documentation">
